--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^3.3.1",
     "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/cli": "~7.0.1",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,5 +48,23 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
+  },
+  "resolutions": {
+    "elliptic": "6.5.3",
+    "websocket-extensions": "0.1.4",
+    "acorn": "5.7.4",
+    "https-proxy-agent": "2.2.3",
+    "minimist": "0.2.1",
+    "kind-of": "6.0.3",
+    "serialize-javascript": "3.1.0",
+    "set-value": "2.0.1",
+    "mixin-deep": "1.3.2",
+    "handlebars": "4.3.0",
+    "lodash": "4.17.19",
+    "lodash.mergewith": "4.6.2",
+    "js-yaml": "3.13.1",
+    "fstream": "1.0.12",
+    "tar": "2.2.2",
+    "webpack-dev-server": "3.1.11"
   }
 }
